# Neuroger

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: android.yml
ViewPagerIndicator/: build.gradle
ViewPagerIndicator/src/main/: AndroidManifest.xml
ViewPagerIndicator/src/main/java/com/viewpagerindicator/: CirclePageIndicator.java  LinePageIndicator.java  TitlePageIndicator.java  UnderlinePageIndicator.java
app/: .gitignore  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  getglobalCDR.c  getglobalCDR.h  getglobalCDR_initialize.c  getglobalCDR_initialize.h  getglobalCDR_terminate.c  getglobalCDR_terminate.h  getglobalCDR_types.h  histcounts.c  histcounts.h  ifWhileCond.c  ifWhileCond.h  neuroger.cpp  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h  sign.c  sign.h  sort1.c  sort1.h  sortIdx.c  sortIdx.h  sum.c  sum.h
app/src/main/java/com.aess.licenciaapp/: HashUtils.java  LicenseActivity.java  LicenseConstants.java  LicenseManager.java
app/src/main/java/software/cneuro/neuroger/: HomeApplication.java
app/src/main/res/drawable/: bg_edit_text_flat.xml  ic_antecedents.xml  ic_bad.xml  ic_classification.xml  ic_cognitive_performance.xml  ic_patient_data.xml  ic_physical_performance.xml  ic_regular.xml  ic_state_ok.xml  ic_to_do.xml  logo.xml
app/src/main/res/layout/: action_btn_container.xml  activity_about.xml  activity_home.xml  activity_large_header.xml  activity_license.xml  activity_questionnaire_pager.xml  activity_small_header.xml  activity_splash.xml  activity_stimulus_image.xml  activity_subject_classification.xml  activity_subject_cognitive_evaluation.xml  activity_subject_general_detail.xml  activity_warning_signs.xml  card_image.xml  card_image_arrow.xml  card_image_to_do.xml  card_score_result.xml  custom_action_view.xml  detail_text.xml  detail_text_title.xml  dialog_image.xml  dialog_text.xml  fragment_card_evaluation_item_detail.xml  fragment_card_icon_detail.xml  fragment_carer_card_detail.xml  fragment_carer_detail.xml  fragment_carer_input.xml  fragment_cdr_detail.xml  fragment_frail_detail.xml  fragment_frail_input.xml  fragment_mini_mental_state_detail.xml  fragment_mini_mental_state_input.xml  fragment_pathological_antecedents_detail.xml  fragment_pathological_antecedents_input.xml  fragment_pfeiffer.xml  fragment_physical_performance_detail.xml  fragment_physical_performance_input.xml  fragment_questionnaire.xml  fragment_questionnaire_detail.xml  fragment_questionnaire_pager.xml  (+35 more)
app/src/main/res/layout-sw600dp/: fragment_carer_input.xml  fragment_subject_input.xml
app/src/main/res/layout-v21/: fragment_card_4_item_detail.xml  fragment_card_4_item_detail_1.xml  fragment_mini_mental_state_input_test.xml
app/src/main/res/menu/: contextual_menu_search_list.xml  menu_home.xml  menu_show_chronometer.xml  menu_show_edit.xml  menu_show_help.xml  menu_show_save.xml
app/src/main/res/values/: arrays.xml  arrays_cdr.xml  arrays_frail_scale.xml  arrays_geriatric_depression_scale.xml  arrays_havana.xml  arrays_hhies.xml  arrays_katz_index.xml  arrays_lawton_scale.xml  arrays_mexico.xml  arrays_mini_mental_state.xml  arrays_pfeiffer.xml  arrays_psychoaffective_scale.xml  arrays_psychofamily.xml  arrays_subjective_evaluation.xml  arrays_warning_signs.xml  colors.xml  strings.xml  strings_cdr.xml  strings_frail_scale.xml  strings_gds.xml  strings_hhies.xml  strings_katz_index.xml  strings_lawton_modified_scale.xml  strings_mini_mental_state.xml  strings_pathological_antecedents.xml  strings_pfeiffer.xml  strings_physical_performance.xml  strings_psychoaffective_scale.xml  strings_psychofamily.xml  strings_subjective_evaluation.xml  strings_warning_sign.xml  themes.xml
app/src/main/res/xml/: provider_paths.xml
libraries/neurodevelopment-neuroger-database/: .gitignore  build.gradle  settings.gradle  us.stackdump
libraries/neurodevelopment-neuroger-database/app/: build.gradle
libraries/neurodevelopment-neuroger-database/neuroger.database/: build.gradle  proguard-rules.pro
libraries/neurodevelopment-neuroger-database/neuroger.database/src/main/: AndroidManifest.xml
libraries/neurodevelopment-neuroger-database/neuroger.database/src/main/res/values/: strings.xml
libraries/neurodevelopment-neuroger-theme/: .gitignore  build.gradle  settings.gradle
libraries/neurodevelopment-neuroger-theme/neuroger.theme/: build.gradle
libraries/neurodevelopment-neuroger-theme/neuroger.theme/src/main/: AndroidManifest.xml
libraries/neurodevelopment-neuroger-theme/neuroger.theme/src/main/res/drawable/: btn_disable.xml  btn_eval_calculate_disable.xml  btn_eval_calculate_focused.xml  btn_eval_calculate_normal.xml  btn_eval_calculate_pressed.xml  btn_eval_calculate_selectable_background.xml  btn_eval_help_disable.xml  btn_eval_help_focused.xml  btn_eval_help_normal.xml  btn_eval_help_pressed.xml  btn_eval_help_selectable_background.xml  btn_focused.xml  btn_normal.xml  btn_pressed.xml  btn_save_disable.xml  btn_save_focused.xml  btn_save_normal.xml  btn_save_pressed.xml  btn_save_selectable_background.xml  btn_selectable_background.xml  btn_text_selector.xml  card_title_text_selector.xml  ckb_selectable_background.xml  ckb_selectable_white.xml  context_menu_background.xml  context_menu_bottom.xml  edittext_disable.xml  edittext_focused.xml  edittext_normal.xml  edittext_normal_error.xml  edittext_selectable_background.xml  edittext_selectable_error_background.xml  edittext_text_hint_selector.xml  edittext_text_selector.xml  list_item_selected_pressed.xml  list_item_sub_text_selector.xml  list_item_text_selector.xml  list_item_unselected_pressed.xml  list_selector.xml  question_box.xml  (+13 more)
libraries/neurodevelopment-neuroger-theme/neuroger.theme/src/main/res/layout/: action_btn_container.xml  activity_theme.xml  fragment_recycler_list.xml  fragment_search_list.xml  horizontal_line_light_thin.xml  list_empty.xml  one_line_list_item.xml  spinner_item_dropdown.xml  spinner_item_selected.xml
(+181 files in other folders)
